--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,6 +174,11 @@ jobs:
       # Might want to trim this down, but these dependencies should work for KMC
     - name: install lcov
       run: yum install -y --enablerepo=epel lcov
+    - name: create bashrc
+      run: >
+          echo "export LD_LIBRARY_PATH=/usr/local/lib/:/usr/local/include:$LD_LIBRARY_PATH" >> ~/.bashrc 
+          && source ~/.bashrc 
+          && ldconfig
     # End Container Setup
 
     - name: RHEL Build Script
