--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -201,13 +201,11 @@ jobs:
 
     - name: RHEL Build Script
       working-directory: ${{github.workspace}}
-      run: |
-        export CFLAGS="-fprofile-arcs -ftest-coverage -fcondition-coverage -g"
-        source ~/.bashrc && ${GITHUB_WORKSPACE}/support/scripts/build_rhel.sh
+      run: source ~/.bashrc && ${GITHUB_WORKSPACE}/support/scripts/build_rhel.sh
     
-    # - name: Code-Coverage
-    #   working-directory: ${{github.workspace}}
-    #   run: source ~/.bashrc && make gcov
+    - name: Code-Coverage
+      working-directory: ${{github.workspace}}
+      run: source ~/.bashrc && make gcov
 
     - name: Upload 
       uses: codecov/codecov-action@v4
