[nasa/Cryptolib#382] Updates to gitignore.  Push Documentation build into docker container.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ test/cmake_install.cmake
 test/CTestTestfile.cmake
 test/CMakeFiles/*
 Testing/Temporary/*
+docs/wiki/_build
+docs/wiki/_templates
+
