--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: CryptoLib
 
+global_env:
+  CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+
 on: 
   pull_request:
     branches: [ main, dev ]
@@ -54,7 +57,7 @@ jobs:
     - name: Upload 
       uses: codecov/codecov-action@v4
       env:
-        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+        CODECOV_TOKEN: ${{ matrix.global_env.CODECOV_TOKEN }}
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
@@ -103,7 +106,7 @@ jobs:
   #   - name: Upload 
   #     uses: codecov/codecov-action@v4
   #     env:
-  #       CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+  #       CODECOV_TOKEN: ${{ matrix.global_env.CODECOV_TOKEN }}
   #     with:
   #       files: 'coverage/*.c.gcov'
   #       verbose: true
@@ -156,7 +159,7 @@ jobs:
     - name: Upload 
       uses: codecov/codecov-action@v4
       env:
-        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+        CODECOV_TOKEN: ${{ matrix.global_env.CODECOV_TOKEN }}
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
@@ -210,7 +213,7 @@ jobs:
     - name: Upload 
       uses: codecov/codecov-action@v4
       env:
-        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+        CODECOV_TOKEN: ${{ matrix.global_env.CODECOV_TOKEN }}
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
@@ -244,7 +247,7 @@ jobs:
     - name: Upload 
       uses: codecov/codecov-action@v4
       env:
-        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+        CODECOV_TOKEN: ${{ matrix.global_env.CODECOV_TOKEN }}
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
