[nasa/cryptolib#356] Restore codecov token due to protected branch error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,8 @@ jobs:
 
     - name: Upload 
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
@@ -100,6 +102,8 @@ jobs:
 
   #   - name: Upload 
   #     uses: codecov/codecov-action@v4
+  #     env:
+  #       CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
   #     with:
   #       files: 'coverage/*.c.gcov'
   #       verbose: true
@@ -151,6 +155,8 @@ jobs:
 
     - name: Upload 
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
@@ -203,6 +209,8 @@ jobs:
 
     - name: Upload 
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
@@ -235,6 +243,8 @@ jobs:
 
     - name: Upload 
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
       with:
         files: 'coverage/*.c.gcov'
         verbose: true
