--- a/.github/ISSUE_TEMPLATE/2-FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/2-FEATURE_REQUEST.yml
@@ -1,6 +1,6 @@
-name: "💡 Feature Request"
+name: "Feature Request"
 description: Create a new ticket for a new feature request
-title: "💡 [REQUEST] - <title>"
+title: ""
 labels: [
   "question"
 ]
