--- a/.github/ISSUE_TEMPLATE/1-BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/1-BUG_REPORT.yml
@@ -1,6 +1,6 @@
-name: "Bug Report"
+name: "🐛 Bug Report"
 description: Create a new ticket for a bug.
-title: ""
+title: "🐛 [BUG] - <title>"
 labels: [
   "bug"
 ]
@@ -41,6 +41,7 @@ body:
       description: If applicable, add screenshots to help explain your problem.
       value: |
         ![DESCRIPTION](LINK.png)
+      render: bash
     validations:
       required: false
   - type: textarea
