--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install clang-format
-        run: apt-get update && apt-get install -y clang-format
+        run: sudo apt-get update && sudo apt-get install -y clang-format
 
       - name: Run Linter
         uses: DoozyX/clang-format-lint-action@v0.15
