[nasa/cryptolib#438] Fix env var for auto-commit

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Auto-Commit Formatting Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit-message: 'style: auto-format via clang-format'
+          commit_message: 'style: auto-format via clang-format'
         
